  . Fixed bug #78579 (mb_decode_numericentity: args number inconsistency).
    (cmb)
  . Fixed bug #78609 (mb_check_encoding() no longer supports stringable
    objects). (cmb)

- Standard:
  . Fixed bug #76342 (file_get_contents waits twice specified timeout).
    (Thomas Calvet)
  . Fixed bug #78612 (strtr leaks memory when integer keys are used and the
    subject string shorter). (Nikita)

26 Sep 2019, PHP 7.2.23

- Core:
  . Fixed bug #78220 (Can't access OneDrive folder). (cmb, ab)
  . Fixed bug #78412 (Generator incorrectly reports non-releasable $this as GC
    child). (Nikita)

- FastCGI:
  . Fixed bug #78469 (FastCGI on_accept hook is not called when using named
    pipes on Windows). (Sergei Turchanov)

- MySQLnd:
  . Fixed connect_attr issues and added the _server_host connection attribute.
    (Qianqian Bu)

- ODBC:
  . Fixed bug #78473 (odbc_close() closes arbitrary resources). (cmb)

- PDO_MySQL:
  . Fixed bug #41997 (SP call yields additional empty result set). (cmb)

- sodium:
  . Fixed bug #78510 (Partially uninitialized buffer returned by
    sodium_crypto_generichash_init()). (Frank Denis, cmb)

- SPL:
  . Fixed bug #72884 (SplObject isCloneable() returns true but errs on clone).
    (Chu Zhaowei)

29 Aug 2019, PHP 7.2.22

- Core:
  . Fixed bug #78363 (Buffer overflow in zendparse). (Nikita)
  . Fixed bug #78379 (Cast to object confuses GC, causes crash). (Dmitry)

- Curl:
  . Fixed bug #77946 (Bad cURL resources returned by curl_multi_info_read()).
    (Abyr Valg)

- Exif:
  . Fixed bug #78333 (Exif crash (bus error) due to wrong alignment and
    invalid cast). (Nikita)

- Iconv:
  . Fixed bug #78342 (Bus error in configure test for iconv //IGNORE). (Rainer
    Jung)

- LiteSpeed:
  . Updated to LiteSpeed SAPI V7.5 (Fixed clean shutdown). (George Wang)

- MySQLnd:
  . Fixed bug #78179 (MariaDB server version incorrectly detected). (cmb)

- Opcache:
  . Fixed bug #77191 (Assertion failure in dce_live_ranges() when silencing is